refactor: migrate Redis and MongoDB async tasks to virtual thread executors
- Replace RedisManager internal worker threads with dedicated virtual thread executors
- Add separate outbound and MongoDB executors for improved task isolation
- Update MongoManager to accept and use the shared MongoDB executor
- Execute MongoDB async operations through the dedicated executor
- Pass the MongoDB executor from RedisManager during MongoManager initialization